消除对guava的依赖